Added language detection api using apache Tika
