# src/main/java/com/lingo/craft/adapters/inbound/detection/LanguageDetectionController.java
@@ -1,13 +1,15 @@
 package com.lingo.craft.adapters.inbound.detection;
 
 import com.lingo.craft.domain.detection.service.LanguageDetectionService;
+import org.apache.tika.exception.TikaException;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 import com.diabolocom.release.openapi.model.LanguageDetectionResponse;
 import com.diabolocom.release.openapi.model.LanguageDetectionRequest;
+import org.springframework.web.multipart.MultipartFile;
+import org.xml.sax.SAXException;
+
+import java.io.IOException;
 
 @RestController
 @RequestMapping("/detect")
@@ -34,6 +36,17 @@ public class LanguageDetectionController {
                                         languageDetectionRequest
                                 )
                         )
+                )
+        );
+    }
+
+    @PostMapping("/upload")
+    public ResponseEntity<LanguageDetectionResponse> detectLanguageFromFile(
+            @RequestPart("file") MultipartFile multipartFile
+    ) throws IOException, TikaException, SAXException {
+        return ResponseEntity.ok(
+                languageDetectionModelMapper.languageDetectionResponse(
+                        languageDetectionService.detectLanguageFromFile(multipartFile)
                 )
         );
     }
