# src/main/resources/api/api-spec.yaml
@@ -171,6 +171,42 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
+  /detect/upload:
+    post:
+      summary: Api to detect language from file
+      operationId: detectLanguageFromFile
+      description: Upload file with content to detect language
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                file:
+                  type: string
+                  format: binary
+      responses:
+        '200':
+          description: Language is detected successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LanguageDetectionResponse'
+
+        '400':
+          description: Bad request, check request payload
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
 components:
   schemas:
     LanguageDetectionRequest:
